Selecting module info with image IDs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!--
 				<h1 class="text-center">Odoo L10n MX Modules</h1>
 -->
-				<!-- Diagram Row 1 -->
+				<!-- Logo Row -->
 				<div class="fd_row"></div>
 				<div class="row fd_row">
 					<div class="col-md-2 col-md-offset-1 "></div>
@@ -27,29 +27,97 @@
 					<div class="col-md-2 "></div>
 					<div class="col-md-2 "></div>
 				</div>
-				<div id="module-info" class="row fd_row">
-					<div class="col-md-6">
-						<img class="img-responsive center-block" src="img/smile.jpg">
+				<div id="module-info">
+					<!-- Module Sales Info -->
+					<div id="info_mod_sales" class="row fd_row">
+						<div class="col-md-6">
+							<img class="img-responsive center-block" src="img/smile.jpg">
+						</div>
+						<div class="col-md-6">
+							<h2>Module Sales</h2>
+							<span>Module Sales subtitle</span>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
+							<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
+							<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
+						</div>
 					</div>
-					<div class="col-md-6">
-						<h2>Module Title</h2>
-						<span>Module subtitle</span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
-						<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
-						<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
+					<!-- Module Accounting Info -->
+					<div id="info_mod_accounting" class="row fd_row">
+						<div class="col-md-6">
+							<img class="img-responsive center-block" src="img/smile2.jpg">
+						</div>
+						<div class="col-md-6">
+							<h2>Module Accounting</h2>
+							<span>Module Accounting subtitle</span>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
+							<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
+							<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
+						</div>
+					</div>
+					<!-- Module HR Info -->
+					<div id="info_mod_hr" class="row fd_row">
+						<div class="col-md-6">
+							<img class="img-responsive center-block" src="img/smile.jpg">
+						</div>
+						<div class="col-md-6">
+							<h2>Module Human Resources</h2>
+							<span>Module Human Resources subtitle</span>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
+							<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
+							<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
+						</div>
+					</div>
+					<!-- Module Documents Info -->
+					<div id="info_mod_documents" class="row fd_row">
+						<div class="col-md-6">
+							<img class="img-responsive center-block" src="img/smile2.jpg">
+						</div>
+						<div class="col-md-6">
+							<h2>Module Documents</h2>
+							<span>Module Documents subtitle</span>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
+							<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
+							<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
+						</div>
+					</div>
+					<!-- Module Reports Info -->
+					<div id="info_mod_reports" class="row fd_row">
+						<div class="col-md-6">
+							<img class="img-responsive center-block" src="img/smile.jpg">
+						</div>
+						<div class="col-md-6">
+							<h2>Module Reports</h2>
+							<span>Module Reports subtitle</span>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
+							<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
+							<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
+						</div>
+					</div>
+					<!-- Module Warehouse Info -->
+					<div id="info_mod_warehouse" class="row fd_row">
+						<div class="col-md-6">
+							<img class="img-responsive center-block" src="img/smile2.jpg">
+						</div>
+						<div class="col-md-6">
+							<h2>Module Warehouse</h2>
+							<span>Module Warehouse subtitle</span>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
+							<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
+							<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
+						</div>
 					</div>
 				</div>
-				<!-- Diagram Row 2 -->
+				<!-- Icons Row 1 -->
 				<div class="row fd_row">
-					<div class="col-md-4"><img id="sales" class="img-module img-responsive center-block" src="img/sales.jpg" alt="Sales"></div>
-					<div class="col-md-4"><img id="accounting" class="img-module img-responsive center-block" src="img/accounting.jpg" alt="Accounting"></div>
-					<div class="col-md-4"><img id="hr" class="img-module img-responsive center-block" src="img/hr.jpg" alt="Human Resources"></div>
+					<div class="col-md-4"><img id="img_mod_sales" class="img-module img-responsive center-block" src="img/sales.jpg" alt="Sales"></div>
+					<div class="col-md-4"><img id="img_mod_accounting" class="img-module img-responsive center-block" src="img/accounting.jpg" alt="Accounting"></div>
+					<div class="col-md-4"><img id="img_mod_hr" class="img-module img-responsive center-block" src="img/hr.jpg" alt="Human Resources"></div>
 				</div>
-				<!-- Diagram Row 3 -->
+				<!-- Icons Row 2 -->
 				<div class="row fd_row">
-					<div class="col-md-4"><img id="documents" class="img-module img-responsive center-block" src="img/documents.jpg" alt="Documents"></div>
-					<div class="col-md-4 "><img id="reports" class="img-module img-responsive center-block" src="img/reports.jpg" alt="Reports"></div>
-					<div class="col-md-4 "><img id="warehouse" class="img-module img-responsive center-block" src="img/warehouse.jpg" alt="Warehouse"></div>
+					<div class="col-md-4"><img id="img_mod_documents" class="img-module img-responsive center-block" src="img/documents.jpg" alt="Documents"></div>
+					<div class="col-md-4 "><img id="img_mod_reports" class="img-module img-responsive center-block" src="img/reports.jpg" alt="Reports"></div>
+					<div class="col-md-4 "><img id="img_mod_warehouse" class="img-module img-responsive center-block" src="img/warehouse.jpg" alt="Warehouse"></div>
 				</div>
 			</section>
 		</content>
